// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render <Img> with isLoaded prop 1`] = `
<styled.div
  style={
    Object {
      "backgroundImage": "url(\\"image.jpg\\"",
      "filter": "none",
      "opacity": 1,
    }
  }
/>
`;

exports[`should render <Img> without isLoaded prop 1`] = `
<styled.div
  style={
    Object {
      "backgroundImage": "url(\\"image.jpg\\"",
      "filter": "blur(20px)",
      "opacity": 0.5,
    }
  }
/>
`;
